--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,63 +1,72 @@
+#upload-input {
+  display: none;
+}
 .btn:focus, .upload-btn:focus{
-	outline: 0 !important;
+  outline: 0 !important;
 }
 
-html,body{
-	height: 100%;
-	background-color: #4791D2;
+html,
+body {
+  height: 100%;
+  background-color: #4791D2;
 }
 
-body{
-	text-align: center;
-	font-family: 'Raleway',sans-serif;
-}
-.row{
-	margin-top: 80px;
+body {
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
 }
 
-.upload-btn{
-	color:#ffffff;
-	background-color: #F89406;
-	border:none;
+.row {
+  margin-top: 80px;
+}
+
+.upload-btn {
+  color: #ffffff;
+  background-color: #F89406;
+  border: none;
 }
 
 .upload-btn:hover,
 .upload-btn:focus,
 .upload-btn:active,
-.upload-btn.active{
-	color:#ffffff;
-	background-color: #FA8900;
-	border:none;
-}
-h4{
-	padding-bottom: 30px;
-	color: #B8BDC1;
+.upload-btn.active {
+  color: #ffffff;
+  background-color: #FA8900;
+  border: none;
 }
 
-.glyphicon{
-	font-size: 5em;
-	color: #9CA3A9;
+h4 {
+  padding-bottom: 30px;
+  color: #B8BDC1;
 }
 
-h2{
-	margin-top: 15px;
-	color: #68757E;
+.glyphicon {
+  font-size: 5em;
+  color: #9CA3A9;
 }
 
-.panel:{
-	padding-top: 20px;
-	padding-bottom: 20px;
+h2 {
+  margin-top: 15px;
+  color: #68757E;
 }
-#upload-input:{
-	display: none;
+
+.panel {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-@media (min-width: 768px){
-	.main-container{
-		width:100%;
-	}
+
+#upload-input {
+  display: none;
 }
-@media (min-width: 992px){
-	.container{
-		width:450px;
-	}
+
+@media (min-width: 768px) {
+  .main-container {
+    width: 100%;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    width: 450px;
+  }
 }
