--- a/views/index.html
+++ b/views/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>File Upload using Node.js</title>
+	<title>File Uploader - coligo.io</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<meta name="author" content="Narayanan Ts">
-	<meta name="description" content="File upload using Node.js">
-	<meta name="keywords" content="File Upload using Node.js">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  	<link rel="stylesheet" type="text/css" href="../public/css/styles.css">
-  	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  	<link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
@@ -26,9 +17,9 @@
 					<div class="panel-body">
 						<span class="glyphicon glyphicon-cloud-upload"></span>
 						<h2>File Uploader</h2>
-						<h4>Narayanan Ts</h4>
-						<div class="progress">
-							<div class="progress-bar" role="progressbar"></div>
+						<h4>Coligo.io</h4>
+						<div class="progressbar">
+							<span class="progress-bar" role="progressbar"></span>
 						</div>
 						<button class="btn btn-lg upload-btn" type="button">Upload File</button>
 					</div>
@@ -36,9 +27,13 @@
 			</div>
 		</div>
 	</div>
-	<input type="file" name="uploads[]" id="upload-input" multiple="multiple"><br>
+
+	<input type="upload-right" type="file" name="uploads[]" multiple="multiple"><br/>
 	<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  	<script type="text/javascript" src="../public/js/uploads.js"></script>
+  	<script src="javascripts/upload.js"></script>
 </body>
 </html>
+
+
+
