--- a/views/index.html
+++ b/views/index.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>File Uploader - coligo.io</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  	<link href="css/styles.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="author" content="Narayanan Ts">
+  <meta name="description" content="File upload using Node.js">
+  <meta name="keywords" content="File Upload using Node.js">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>File Uploader - coligo.io</title>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12">
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<span class="glyphicon glyphicon-cloud-upload"></span>
-						<h2>File Uploader</h2>
-						<h4>Coligo.io</h4>
-						<div class="progressbar">
-							<span class="progress-bar" role="progressbar"></span>
-						</div>
-						<button class="btn btn-lg upload-btn" type="button">Upload File</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <span class="glyphicon glyphicon-cloud-upload"></span>
+            <h2>File Uploader</h2>
+            <h4>Narayanan Ts</h4>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar"></div>
+            </div>
+            <button class="btn btn-lg upload-btn" type="button">Upload File</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <input id="upload-input" type="file" name="uploads[]" multiple="multiple"></br>
 
-	<input type="upload-right" type="file" name="uploads[]" multiple="multiple"><br/>
-	<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  	<script src="javascripts/upload.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="js/uploads.js"></script>
 </body>
 </html>
-
-
-
